[project]
name = "helmadm"
version = "0.1.2"
description = "Generate Argo CD Application manifests from Helm releases in Kubernetes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=31.0.0",
    "pyyaml>=6.0",
    "typer>=0.15.0",
]

[project.scripts]
helmadm = "helmadm.cli:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["helmadm"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.ai",
    "/.venv",
    "/.vscode",
    "/bundles",
    "/docs",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.mypy_cache",
    "/dist",
    "/build",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "no_stub_k8s_access: skip autouse stub of check_kubernetes_accessible (test real error path)",
]
